--- a/components/common/container/Container.module.scss
+++ b/components/common/container/Container.module.scss
@@ -4,11 +4,7 @@
 .wrapper {
   max-width: 1390px;
   margin: 0 auto;
-
-  @include pcScreen {
-    max-width: 1390px;
-    margin: 0 auto;
-  }
+  padding: 0 10px;
 }
 
 .wrapper_clear {
