--- a/styles/include/_normalize.scss
+++ b/styles/include/_normalize.scss
@@ -19,6 +19,18 @@ body {
 
 main {
   flex: 1 1 auto;
+  margin-top: 80px;
+  @media (max-width: 1200px) {
+    margin-top: 70px;
+  }
+
+  @media (max-width: 1024px) {
+    margin-top: 60px;
+  }
+}
+
+#__next {
+  height: 100%;
 }
 
 ul {
