--- a/components/common/header/headerNav/HeaderNav.module.scss
+++ b/components/common/header/headerNav/HeaderNav.module.scss
@@ -1,5 +1,5 @@
-@import '/styles/mixins.scss';
-@import '/styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .header__menu {
   display: flex;
@@ -12,7 +12,7 @@
     background: rgba(255, 255, 255, 0.99);
     backdrop-filter: blur(5px);
     flex-direction: column;
-    padding: 0 0 100% 0;
+    padding: 30px 0 100% 0;
     align-items: center;
     width: 100%;
     transform: translateX(100%);
