--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -1,7 +1,15 @@
+.shared__container {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .header {
   box-shadow: 0 3px 5px rgb(30 158 0 / 90%);
   background-color: #fff;
-  position: sticky;
+  position: fixed;
+  height: max-content;
   top: 0;
   bottom: 0;
   width: 100%;
@@ -13,11 +21,8 @@
    top: 0;
    bottom: 0;
    width: 100%;
-   height: 100vh;
    overflow-x: hidden;
-   overflow-y: auto;
-   display: flex;
-   flex-direction: column;
+   overflow-y: hidden;
  }
 
 
