--- a/components/separator/Separator.module.scss
+++ b/components/separator/Separator.module.scss
@@ -1,11 +1,11 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .separator__title__container {
   margin: 100px 0 30px 0;
   text-align: center;
   @include ipadScreen {
-    margin-bottom: 3%;
+    margin: 50px 0 4% 0;
   }
 
   .separator_title {
