--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -8,9 +8,9 @@
     padding: 0 10px;
   }
 }
+
 .max {
   width: 100%;
-  padding: 0 10px;
 }
 
 .tabs__container {
@@ -35,8 +35,10 @@
         &_active {
           color: color(green);
           @media (max-width: 650px) {
+            background: color(green);
             color: color(white);
           }
+
           &:after {
             content: "";
             position: absolute;
@@ -66,16 +68,16 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          width: 100%;
           height: 42px;
-          width: 70%;
-          background-color: color(green);
-          color: color(white);
+          border: 1px solid #009247;
+          color: #009247;
           border-radius: 5px;
           font-size: 16px;
           padding: 0;
           &_active {
-            color: color(white);
-            background-color: color(green);
+            background-color: #009247;
+            color: white;
           }
         }
       }
@@ -94,13 +96,13 @@
         align-items: center;
         gap: 15px;
       }
+
       &.line_fix {
         width: 100%;
         height: 5px;
         background: rgba(0, 0, 0, .247);
         border-radius: 5px;
         cursor: pointer;
-
         &_active {
           background-color: color(green);
           color: white;
