--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   margin: 40px auto;
   flex-direction: column;
+  @include ipadScreen {
+    margin: 40px auto 20px auto;
+  }
 }
 
 .bottom__separator {
@@ -82,7 +85,7 @@
   gap: 40px;
   justify-content: center;
   @include phoneScreen {
-    padding: 30px;
+    padding: 30px 20px;
     gap: 20px;
     flex-direction: column;
   }
