--- a/features/about/tab_references/References.module.scss
+++ b/features/about/tab_references/References.module.scss
@@ -6,6 +6,9 @@
   display: flex;
   justify-content: center;
   margin: 40px auto 130px;
+  @include ipadScreen {
+    margin: 40px auto;
+  }
 }
 
 .tabs_container {
