--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -11,7 +11,7 @@
     color: #5A5A5A;
     font-size: 14px;
     line-height: 16px;
-    padding: 5px 5px;
+    padding: 5px 0;
     pointer-events: none;
     position: absolute;
     transition: all 200ms;
