--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -71,13 +71,13 @@
           width: 100%;
           height: 42px;
           border: 1px solid #009247;
-          color: #009247;
+          color: color(green);
           border-radius: 5px;
           font-size: 16px;
           padding: 0;
           &_active {
-            background-color: #009247;
-            color: white;
+            background: color(green);
+            color: color(white);
           }
         }
       }
@@ -89,7 +89,6 @@
       justify-content: space-between;
       cursor: pointer;
       column-gap: 20px;
-
       @media (max-width: 650px) {
         flex-direction: column;
         justify-content: center;
@@ -105,10 +104,10 @@
         cursor: pointer;
         &_active {
           background-color: color(green);
-          color: white;
+          color: color(white);
           &:hover{
             background-color: color(green);
-            color: white;
+            color: color(white);
             border: 1px solid color(green);
           }
         }
@@ -127,7 +126,7 @@
         height: 42px;
         border:1px solid #009247;
         border-radius: 5px;
-        color: #009247;
+        color: color(green);
         transition: all 0.3s;
         &:hover{
           background-color: #ececec;
