--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -104,7 +104,6 @@
           display: flex;
           align-items: center;
           justify-content: flex-start;
-          width: 100%;
           p {
             width: 100px;
             white-space: nowrap;
@@ -156,7 +155,6 @@
           align-items: center;
           gap: 10px;
           font-size: 14px;
-
           svg {
             margin-left: 12px;
           }
@@ -190,7 +188,7 @@
       padding: 11px 12px;
       text-align: right;
       border: 1px solid #efefef;
-        background: #fff;
+      background: color(white);
       border-radius: 5px;
 
       svg {
