--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 28px 10px;
+    padding: 28px 0;
     transition: all 0.3s;
     &_active {
       display: flex;
