--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,7 +7,8 @@ $colors: (
         dark: #212121,
         white: #FFF,
         lightgreen: #2E6143,
-        green: #009247
+        green: #009247,
+        error: #ff0000,
 );
 
 $screenWidth: (
