--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -10,7 +10,7 @@
 
 .certificates__items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 20px;
   padding: 0 10px;
   margin-bottom: 130px;
@@ -20,6 +20,15 @@
 
   @include phoneScreen {
     margin-bottom: 50px;
+  }
+
+  &__block {
+    h2 {
+      font-size: 20px;
+      text-align: center;
+      color: color(green);
+      margin: 10px 0;
+    }
   }
 
   &__item {
