--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -14,13 +14,13 @@
   animation-name: bgModal;
   animation-duration: 300ms;
 
-  @include phoneScreen {
-    padding: 0 10px;
-  }
 
   &.black {
     background: rgba(19, 28, 8, 0.8);
     backdrop-filter: blur(3px);
+    @include phoneScreen {
+      padding: 0 10px;
+    }
   }
 
   &.white {
@@ -33,8 +33,8 @@
     justify-content: space-between;
     cursor: pointer;
     padding: 20px 20px 0 20px;
-    svg{
-      path{
+    svg {
+      path {
         fill:rgb(128, 128, 128);
       }
     }
@@ -95,13 +95,19 @@
       width: 80%;
       background: transparent;
       box-shadow: 0 0 0 rgb(0.0 .0 .0);
-      &.modal_close {
+      .modal_content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .modal_close {
         svg {
           path {
             fill: white;
           }
         }
       }
+            
     }
 
     &__full_modal {
@@ -130,7 +136,7 @@
       max-width: 1920px;
       border-radius: 0;
       padding: 0;
-      background: color(white);
+      background: color(white)
     }
   }
 }
