--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -253,12 +253,14 @@
     }
   }
 }
+
 .homecategory {
   &_banner {
     &__slider {
       &_slide {
-        position: relative;
-        height: 500px;
+        max-width: 950px;
+        margin: 0 auto;
+        height: 100%;
         @media (max-width: 1530px) {
           height: 600px;
         }
@@ -528,7 +530,9 @@
     }
   }
 }
+
 .industries {
+  
   &_banner {
     &__slider {
       &_slide {
@@ -576,10 +580,6 @@
           }
 
           @media (max-width: 450px) {
-            height: 100%;
-          }
-
-          @include SEScreen {
             height: 100%;
           }
         }
@@ -699,14 +699,13 @@
         letter-spacing: 5px;
         line-height: 145%;
         text-align: center;
+        position: relative;
 
         @include ipadScreen {
           font-size: 16px;
           letter-spacing: 1px;
         }
       }
-
-      position: relative;
 
       &:after {
         content: '';
@@ -722,6 +721,7 @@
     }
   }
 }
+
 .pageProduct {
   &_banner {
     &__slider {
@@ -955,7 +955,6 @@
 }
 
 .factorySlider__history {
-
   &__items {}
 
   &__slide {
