--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -2,13 +2,9 @@
 @import 'styles/variables.scss';
 
 .job_container {
-  max-width: 600px;
-  display: flex;
-  justify-content: center;
-  margin: 40px auto;
-  flex-direction: column;
+  margin: 40px auto 80px;
   @include ipadScreen {
-    margin: 40px auto 20px auto;
+    margin: 40px auto;
   }
 }
 
