--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -3,7 +3,7 @@
 
 .home {
   &_banner {
-    margin-bottom: 100p;
+    margin-bottom: 100px;
     &__slider {
       margin-bottom: 100px;
       &_slide {
@@ -975,11 +975,13 @@
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
-    &:hover {
-      background-color: #c8c8c8;
+    &.activePage {
+      background-color: color(green);
+      color: color(white);
     }
-    &.active {
-      background-color: red;
+    &:hover {
+      background-color: color(green);
+      color: color(white);
     }
   }
 }
