--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -154,6 +154,15 @@
     }
   }
 
+  .register_checkbox {
+    .overflow {
+      margin-top: 0;
+    }
+    .overflow__auto {
+      margin-top: 0;
+    }
+  }
+
   &__items {
     overflow: hidden;
     &__title {
