--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -30,7 +30,7 @@
     border: none;
     outline: none;
     border-bottom: 1px solid #bcbdc0;
-    padding: 15px 0 6px 11px;
+    padding: 15px 0 6px 0;
     font-size: 14px;
     box-sizing: border-box;
     transition: background-color 600000s 0s, color 600000s 0s;
