--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -143,7 +143,7 @@
   max-width: 550px;
   margin: 30px auto 0;
   background: color(white);
-  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
+  box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 20px 20px;
   button {
@@ -180,14 +180,13 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    margin: 30px 0 20px 0;
+    margin: 0 0 10px 0;
     @media (max-width: 550px) {
       flex-direction: column-reverse;
       align-items: self-start;
       gap: 20px;
     }
     span {
-      display: flex;
       align-items: center;
       font-size: 14px;
       font-weight: 400;
@@ -321,7 +320,7 @@
   max-width: 550px;
   margin: 200px auto;
   background: color(white);
-  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
+  box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   padding: 0 10px;
   border-radius: 10px;
   button {
