--- a/components/spinners/Spinners.module.scss
+++ b/components/spinners/Spinners.module.scss
@@ -8,9 +8,9 @@
   span {
     margin: 0 1px;
     padding: 5px 1px;
-    background: rgb(255, 255, 255);
+    background: color(rgb(255, 255, 255));
     --delay: 0s;
-    animation: arrows 1s var(--delay) infinite ease-in;
+    animation: arrows .7s var(--delay) infinite ease-in;
     &:nth-child(2) {
       --delay: 0.1s
     }
@@ -40,6 +40,11 @@
 }
 
 .spinner__loading__container {
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  opacity: 0.5;
   .spinner__loading {
     position: absolute;
     top: calc(50% - 32px);
@@ -49,33 +54,33 @@
     border-radius: 50%;
     perspective: 800px;
 
-    .iner {
+    .inner {
       position: absolute;
       box-sizing: border-box;
       width: 100%;
       height: 100%;
       border-radius: 50%;
-
-      .one {
+    }
+  
+    .inner.one {
         left: 0%;
         top: 0%;
         animation: rotate-one 1s linear infinite;
         border-bottom: 3px solid green;
-      }
-
-      .two {
+    }
+  
+    .inner.two {
         right: 0%;
         top: 0%;
         animation: rotate-two 1s linear infinite;
         border-right: 3px solid green;
-      }
-
-      .three {
+    }
+  
+    .inner.three {
         right: 0%;
         bottom: 0%;
         animation: rotate-three 1s linear infinite;
         border-top: 3px solid green;
-      }
     }
 
     @keyframes rotate-one {
