--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -91,8 +91,10 @@
 
     button {
       width: 170px;
-      b {
-        padding-right: 20px;
+      position: relative;
+      p {
+        position: absolute;
+        right: 15px;
       }
     }
 
