--- a/features/contacts/tab_sales_office/SalesOffice.module.scss
+++ b/features/contacts/tab_sales_office/SalesOffice.module.scss
@@ -5,7 +5,7 @@
   max-width: 600px;
   display: flex;
   justify-content: center;
-  margin: 40px auto;
+  margin: 40px auto 130px;
 }
 
 .sales_office_container_items {
