--- a/components/common/header/search/SearchModal.module.scss
+++ b/components/common/header/search/SearchModal.module.scss
@@ -65,7 +65,7 @@
 
         svg {
           left: auto;
-          top: 0px !important;
+          top: 0 !important;
           transition: all 0.3s;
           right: 0;
         }
