--- a/components/common/header/headerIcon/HeaderIcon.module.scss
+++ b/components/common/header/headerIcon/HeaderIcon.module.scss
@@ -59,7 +59,7 @@ cursor: pointer;
       width: 35px;
       height: 36px;
       background-color: #FFF;
-      box-shadow: 0px 0px 6px rgb(0 0 0 / 25%);
+      box-shadow: 0 0 6px rgb(0 0 0 / 25%);
       border-radius: 50%;
       position: absolute;
       top: 14px;
