--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -843,8 +843,8 @@
         left: 16%;
         background: rgba(123, 123, 123, 0.38);
         backdrop-filter: blur(20px);
-        padding: 40px 30px;
-        border-radius: 20px;
+        //padding: 40px 30px;
+        //border-radius: 20px;
         @media (max-width: 1800px) {
           left: 13%;
         }
