--- a/components/spinners/Spinners.module.scss
+++ b/components/spinners/Spinners.module.scss
@@ -63,22 +63,22 @@
     }
   
     .inner.one {
-        left: 0%;
-        top: 0%;
+        left: 0;
+        top: 0;
         animation: rotate-one 1s linear infinite;
         border-bottom: 3px solid green;
     }
   
     .inner.two {
-        right: 0%;
-        top: 0%;
+        right: 0;
+        top: 0;
         animation: rotate-two 1s linear infinite;
         border-right: 3px solid green;
     }
   
     .inner.three {
-        right: 0%;
-        bottom: 0%;
+        right: 0;
+        bottom: 0;
         animation: rotate-three 1s linear infinite;
         border-top: 3px solid green;
     }
