--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -7,7 +7,6 @@
     justify-content: space-between;
     margin-top: 40px;
     transition: all 0.3s;
-    border-radius: 15px;
     background-color: transparent;
     row-gap: 10px;
     box-shadow: 0 0 35px rgb(126 126 126 / 16%);
@@ -24,7 +23,7 @@
     }
 
     &:hover {
-      box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
+      box-shadow: 0 0 30px rgba(10, 176, 22, 0.4);
       transition: all 0.3s;
       border-color: #0AB016;
       button {
@@ -198,7 +197,7 @@
       box-shadow: 0 0 35px rgb(126 126 126 / 16%);
       overflow: hidden;
       &:hover {
-        box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
+        box-shadow: 0 0 30px rgba(10, 176, 22, 0.4);
         transition: all 0.3s;
         border-color: #0AB016;
         &_right {
@@ -365,7 +364,7 @@
 
   &_item {
     &:hover img {
-      box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
+      box-shadow: 0 0 30px rgba(10, 176, 22, 0.4);
     }
 
     &:hover {
@@ -376,7 +375,6 @@
     }
 
     button {
-      position: relative;
       transition: all 0.3s;
       position: absolute;
       top: 3%;
