--- a/features/typo_size/specification/Specification.module.scss
+++ b/features/typo_size/specification/Specification.module.scss
@@ -77,7 +77,7 @@
     &_title{
       font-size: 12px;
       border-style: solid;
-      border-width: 0 1px 0px 0;
+      border-width: 0 1px 0 0;
       border-color: white;
       background: #CDCDC0;
       &:first-child{
