--- a/components/checkbox/CheckBox.module.scss
+++ b/components/checkbox/CheckBox.module.scss
@@ -1,9 +1,8 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-
 .checkbox {
-
+  cursor: pointer;
   &__label {
     -ms-user-select: none;
     -moz-user-select: none;
@@ -44,7 +43,6 @@
       box-shadow: inset 0 0 0 var(--s, 1px) var(--b, var(--border));
       margin: -1px 6px 0 0;
       padding: 10px;
-      
       &:hover {
         --s: 2px;
         --b: var(--border-hover);
@@ -103,7 +101,6 @@
     }
 
   }
-  
 
   @keyframes bounce {
     50% {
@@ -116,6 +113,5 @@
       transform: scale(1);
     }
   }
-
 }
 
