--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -39,7 +39,8 @@
     h1 {
       font-size: 30px;
       margin-bottom: 20px;
-      color: grey;
+      color: #898989;
+      font-weight: 400;
       @include phoneScreen {
         font-size: 26px;
       }
@@ -92,7 +93,10 @@
     button {
       width: 170px;
       position: relative;
-      p {
+      li {
+        list-style: none;
+      }
+      .button__spinner {
         position: absolute;
         right: 15px;
       }
@@ -178,7 +182,8 @@
       h1 {
         font-size: 30px;
         margin-bottom: 20px;
-        color: grey;
+        color: #898989;
+        font-weight: 400;
       }
     }
 
