--- a/components/checkbox/CheckBox.module.scss
+++ b/components/checkbox/CheckBox.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 12px;
+    font-size: 14px;
     color: #525252;
     line-height: 125%;
     @include phoneScreen {
