--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -258,7 +258,7 @@
   &_banner {
     &__slider {
       &_slide {
-        max-width: 950px;
+        max-width: 100%;
         margin: 0 auto;
         height: 100%;
         @media (max-width: 1530px) {
