--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -234,11 +234,11 @@
     display: flex;
     flex-direction: column;
     .overflow {
+      margin-top: 5px;
       transition: all 0.3s;
       height: 23px;
       opacity: 0;
       transform: translateY(-10px);
-
       span {
         margin: 0 0 0 10px;
       }
