--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -9,7 +9,6 @@
   grid-template-areas:
     "col1 col2 col2"
     "col1 col3 col4";
-
   @include ipadScreen {
     display: flex;
     flex-direction: column;
@@ -390,38 +389,37 @@
         align-items: center;
         background: #f3f3f3;
       }
-
       @include ipadScreen {
         flex-direction: row;
         height: 380px;
       }
-
       @include phoneScreen {
         flex-direction: column;
         height: 100%;
       }
-
       &_left {
         position: relative;
+        height: 320px;
         @include tabletScreen {
-          height: auto;
+          height: 300px;
           img {
             object-fit: cover;
             @include tabletScreen {
-              width: 100%;
               padding: 0;
               row-gap: 0;
             }
           }
         }
-
         @include ipadScreen {
-          height: 100%;
+          height: auto;
           width: 50%;
         }
-
         @include phoneScreen {
           width: 100%;
+          height: 100%;
+        }
+        img {
+          object-fit: cover;
         }
       }
 
@@ -523,6 +521,15 @@
 
       &_left {
         position: relative;
+        height: 320px;
+        img {
+          object-fit: cover;
+        }
+
+        @include tabletScreen {
+          height: 300px;
+        }
+
         @include ipadScreen {
           width: 50%;
           height: 100%;
@@ -530,6 +537,7 @@
             object-fit: cover;
           }
         }
+
 
         @include phoneScreen {
           width: 100%;
