--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -6,26 +6,10 @@
   justify-content: center;
   margin: 40px auto;
 }
-.input_box {
-  display: flex;
-  position: relative;
-  input {
-    padding: 0 0 0 20px;
-  }
-
-  svg {
-    position: absolute;
-    left: 8px;
-    top: 7px;
-    width: 19px !important;
-    cursor: pointer;
-  }
-}
-
 .catalog_title {
   display: flex;
   justify-content: space-between;
-  padding: 0 10px;
+  align-items: center;
   @include ipadScreen {
     flex-direction: column;
   }
@@ -39,7 +23,8 @@
     @include ipadScreen {
       font-size: 22px;
       line-height: 145%;
-      margin-bottom: 3%;
+      margin-bottom: 4%;
+      text-align: center;
     }
   }
 
@@ -119,21 +104,25 @@
     }
     
     &__info {
-      width: 72%;
+      width: 100%;
       padding: 10px 0;
+      display: flex;
+      flex-direction: column;
       @include phoneScreen {
         width: 100%;
         padding: 20px;
       }
 
       &_title{
-        font-size: 16px;
-        line-height: 145%;
-        color: #212121;
-        margin-bottom: 25px;
-        @include phoneScreen {
-          text-align: center;
-          margin-bottom: 12px;
+        p {
+          font-size: 16px;
+          line-height: 145%;
+          color: #212121;
+          margin-bottom: 25px;
+          @include phoneScreen {
+            text-align: center;
+            margin-bottom: 12px;
+          }
         }
       }
     }
@@ -144,9 +133,9 @@
       @include phoneScreen {
         justify-content: center;
       }
-
       button {
-        padding: 10px 30px;
+        padding: 8px 22px;
+        height: 36px;
         width: auto;
         font-size: 14px;
       }
