--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -20,7 +20,7 @@
       justify-content: space-between;
       align-items: center;
       transition: all 0.3s;
-      padding: 15px 0;
+      padding: 25px 0 35px 0;
     }
     @media (max-width: 1200px) {
       padding: 20px 0 20px 0;
