--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -23,7 +23,7 @@
       padding: 25px 0 35px 0;
     }
     @media (max-width: 1200px) {
-      padding: 20px 0 20px 0;
+      padding: 35px 0;
     }
   }
 
