--- a/components/common/header/headerNav/HeaderNav.module.scss
+++ b/components/common/header/headerNav/HeaderNav.module.scss
@@ -8,11 +8,11 @@
   @media (max-width: 1200px) {
     position: absolute;
     right: 0;
-    top: 56px;
+    top: 85px;
     background: rgba(255, 255, 255, 0.99);
     backdrop-filter: blur(5px);
     flex-direction: column;
-    padding: 30px 0 100% 0;
+    padding: 20px 0 100% 0;
     align-items: center;
     width: 100%;
     transform: translateX(100%);
@@ -25,7 +25,7 @@
   }
 
   &.active_small {
-    top: 50px;
+    top: 85px;
     display: flex;
     transform: translateX(0%);
     transition: transform 0.2s ease-in;
@@ -36,26 +36,24 @@
     letter-spacing: 0.025em;
     transition: 0.3s;
     position: relative;
-
-    &:last-child {
-      margin-right: 0;
-      @media (max-width: 1200px) {
-        border-bottom: 1px solid #bdbdbd56;
-      }
-    }
-
-    &:first-child {
-      margin-left: 0;
-    }
-
     @media (max-width: 1200px) {
       margin: 0;
-      border-top: 1px solid #bdbdbd56;
+      border-bottom: 1px solid #bdbdbd56;
       width: 100%;
       text-align: center;
       padding: 20px 0;
       transition: all 0.3s;
     }
+    &:last-child {
+      margin-right: 0;
+    }
+    &:first-child {
+      margin-left: 0;
+      @media (max-width: 1200px) {
+        border-top: 1px solid #bdbdbd56 !important;
+      }
+    }
+
   }
 
   a {
@@ -63,7 +61,6 @@
     font-size: 16px;
     letter-spacing: 0.025em;
     position: relative;
-
     &::after {
       content: "";
       display: block;
@@ -81,7 +78,6 @@
 
     &.active_menu {
       color: color(lightgreen);
-
       &::after {
         content: "";
         width: 100%;
@@ -97,7 +93,6 @@
 
     &:hover {
       color: color(lightgreen);
-
       &::after {
         content: "";
         width: 100%;
@@ -115,7 +110,6 @@
     }
   }
 }
-
 @media (max-width: 1200px) {
   .header__menu > li:hover {
     background-color: green;
