--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -411,7 +411,7 @@
           }
         }
         @include ipadScreen {
-          height: auto;
+          height: 100%;
           width: 50%;
         }
         @include phoneScreen {
