--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -32,6 +32,7 @@
     border-bottom: 1px solid #bcbdc0;
     padding: 15px 0 6px 0;
     font-size: 14px;
+    width: 100%;
     box-sizing: border-box;
     transition: background-color 600000s 0s, color 600000s 0s;
 
