--- a/components/massage/Message.module.scss
+++ b/components/massage/Message.module.scss
@@ -6,6 +6,9 @@
     border-radius: 8px;
     font-size: 12px;
     position: relative;
+    display: flex;
+    align-items: center;
+    column-gap:10px;
     span {
       display: flex;
       align-items: center;
@@ -23,7 +26,7 @@
       svg {
         width: 20px;
         height: 20px;
-        margin-right: 8px;
+        padding: 10px;
       }
     }
   }
