--- a/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
+++ b/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
@@ -4,4 +4,83 @@
 //первая форма
 .first_form {
   margin: 100px 0 300px 0;
+  border: 1px solid #bebebe;
+  &_top_title {
+    padding: 10px;
+    border-bottom: 1px solid #bebebe;
+    p {
+      font-size: 22px;
+      max-width: 55%;
+      margin: 0 auto;
+      text-align: center;
+      color: color(green);
+      line-height: 145%;
+    }
+  }
+  &_top_first {
+    text-align: center;
+    border-bottom: 1px solid #bebebe;
+    .middle_block {
+      font-size: 18px;
+      line-height: 145%;
+      color: color(dark);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+    }
+    .input {
+      width: 200px;
+    }
+    p {
+      text-align: center;
+      font-size: 14px;
+      color: color(dark);
+      margin: 12px auto;
+    }
+  }
+  .top_content_last_block {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid #bebebe;
+    .input {
+      width: 400px;
+      margin: 10px auto 0;
+    }
+  }
+  &_inputs {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    padding: 20px 15px;
+    border-bottom: 1px solid #bebebe;
+  }
+  &_left_block {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
+  &_right_block {
+    width: 80%;
+    textarea {
+      color: color(dark);
+      box-sizing: border-box;
+      overflow: hidden;
+      width: 100%;
+      height: 100px;
+      padding: 10px;
+      font-size: 14px;
+      border-radius: 4px;
+      background-color: #FFF;
+      border-color: #cfcfcf;
+      &::placeholder {
+        color: color(dark);
+      }
+    }
+  }
+  &_text {
+    display: flex;
+    align-items: center;
+  }
 }
