--- a/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
+++ b/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
@@ -5,6 +5,21 @@
 .first_form {
   margin: 100px 0 300px 0;
   border: 1px solid #bebebe;
+  .right_border {
+    border-left: 1px solid #bebebe;
+    padding: 0 0 0 25px;
+  }
+  .right_flex {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    .input {
+      width: 350px;
+    }
+  }
+  &_textarea {
+    padding: 10px;
+  }
   &_top_title {
     padding: 10px;
     border-bottom: 1px solid #bebebe;
@@ -60,6 +75,11 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
+    h3 {
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 145%;
+    }
   }
   &_right_block {
     width: 80%;
@@ -82,5 +102,36 @@
   &_text {
     display: flex;
     align-items: center;
+    background: color(green);
+    p {
+      color: color(white);
+      font-size: 18px;
+      padding: 12px 10px;
+      text-align: center;
+    }
   }
+  &_textarea {
+    padding: 20px 10px;
+    textarea {
+      color: color(dark);
+      box-sizing: border-box;
+      overflow: hidden;
+      width: 100%;
+      height: 120px;
+      padding: 10px;
+      font-size: 14px;
+      border-radius: 4px;
+      background-color: #FFF;
+      border-color: #cfcfcf;
+      &::placeholder {
+        color: color(dark);
+      }
+    }
+  }
+  &_button {
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+  }
+
 }
