--- a/components/common/header/headerIcon/HeaderIcon.module.scss
+++ b/components/common/header/headerIcon/HeaderIcon.module.scss
@@ -41,7 +41,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      b {
+      strong {
         font-weight: 400;
         color: color(green);
       }
