--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,6 +9,7 @@ $colors: (
         lightgreen: #2E6143,
         green: #009247,
         error: #ff0000,
+        text:#212121,
 );
 
 $screenWidth: (
