--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -37,7 +37,8 @@
       margin-bottom: 40px;
     }
   }
-  &_h3{
+
+  &_h3 {
     font-style: normal;
     font-weight: 300;
     line-height: 50px;
@@ -52,27 +53,29 @@
 
 .interaction_items {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(290px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   gap: 20px;
   margin: 0 0 5% 0;
-  &:last-child{
+
+  &:last-child {
     margin-bottom: 80px;
   }
-  
-  &_item{
+
+  &_item {
     border-radius: 10px;
     overflow: hidden;
     padding: 15px;
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     cursor: pointer;
+
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
       transition: all 0.3s;
     }
 
-    h2{
+    h2 {
       font-size: 20px;
       font-weight: 600;
       line-height: 23px;
@@ -80,20 +83,30 @@
       color: #33953A;
     }
 
-    p{
+    p {
       display: flex;
       justify-content: space-between;
       color: gray;
+      align-items: flex-start;
       font-size: 16px;
       margin: 8px 0;
-      span{
+
+      a {
+        color: color(green);
+
+        &:hover {
+          opacity: 0.6;
+        }
+      }
+
+      span {
         max-width: 200px;
         text-align: right;
         line-height: 150%;
       }
     }
 
-    &_box{
+    &_box {
       margin: 20px 0;
     }
   }
@@ -124,6 +137,7 @@
   align-items: center;
   justify-content: center;
   margin: 40px auto 0;
+
   a {
     display: flex;
     align-items: center;
@@ -131,12 +145,14 @@
     color: rgb(108, 109, 112);
     opacity: 0.9;
     transition: all 0.3s;
+
     &:hover {
       opacity: 1;
     }
 
     &:first-child {
       margin-right: 20px;
+
       svg {
         width: 26px;
       }
@@ -144,6 +160,7 @@
 
     svg {
       margin-right: 5px;
+
       path {
         fill: #33953A;
       }
