--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,6 +10,7 @@ $colors: (
         green: #009247,
         error: #ff0000,
         text:#212121,
+        text-hover:#60955B,
 );
 
 $screenWidth: (
