--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -478,8 +478,10 @@
 
       border-radius: 0 0 10px 0;
     }
-    &__title{
+
+    &__title {
       margin-top: 30px;
+
       h1 {
         border-left: 3px solid color(green);
         padding-left: 15px;
@@ -491,7 +493,8 @@
         color: color(green);
         margin-bottom: 8px;
       }
-      p{
+
+      p {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
@@ -500,6 +503,82 @@
         color: color(text);
         padding-left: 18px;
       }
+    }
+
+    &__keyword {
+      padding-top: 50px;
+
+      h2 {
+        border-left: 3px solid color(green);
+        padding-left: 15px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 145%;
+        letter-spacing: 0.025em;
+        color: color(green);
+        margin-bottom: 8px;
+      }
+
+      &__paragraph {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-bottom: 80px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 145%;
+        margin-left: 20px;
+
+        a {
+          width: fit-content;
+
+          span {
+            padding-bottom: 5px;
+            border-bottom: 1px solid color(dark);
+            color: color(dark);
+
+            &:hover {
+              color: color(text-hover);
+              border-bottom: 1px solid color(text-hover);
+            }
+          }
+        }
+      }
+    }
+
+    &__video {
+      video {
+        width: 100%;
+      }
+    }
+    &__info{&__right{
+      h2 {
+        border-right: 3px solid color(green);
+        padding-right: 15px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 145%;
+        letter-spacing: 0.025em;
+        color: color(green);
+        margin-bottom: 8px;
+        margin-top: 68px;
+        display: flex;
+        justify-content: flex-end;
+      }
+      p{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 160%;
+        text-align: right;
+        letter-spacing: 0.025em;
+
+        color: color(dark);
+      }
+    }
     }
   }
 }
