--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -14,7 +14,9 @@
     width: 100%;
   }
 }
-
+.text_modal{
+  margin-bottom: 20px;
+}
 .authorization__form {
   max-width: 550px;
   margin: 50px auto 0;
