--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -98,6 +98,7 @@
 .job_count {
   border: 2px solid white;
   padding: 10px;
+  text-align: center;
   width: 16px;
   height: 16px;
   border-radius: 50%;
