--- a/features/typo_size/desc/Description.module.scss
+++ b/features/typo_size/desc/Description.module.scss
@@ -97,7 +97,7 @@
     background-color: #90AC12;
     width: 260px;
     color: #FFF;
-    &_first{
+    &_1{
       font-size: 16px;
       background: #548848;
       color: #FFF;
@@ -105,14 +105,14 @@
       padding: 15px 0 15px 20px;
       text-align: left;
     }
-    &_second{
+    &_2{
       font-size: 16px;
       padding: 15px 0;
       color: #FFF;
       background-color: #90AC12;
       width: 260px;
     }
-    &_third{
+    &_3{
       width: 160px;
       background: #548848;
       color: #FFF;
