--- a/components/map/Map.module.scss
+++ b/components/map/Map.module.scss
@@ -7,6 +7,7 @@
   position: relative;
   max-width: 1100px;
   margin: 0 auto 40px;
+  //max-height: 450px;
   @include ipadScreen {
     display: none;
   }
